# foxtrot_project

./: .gitignore  Makefile  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  README.md  README_ORM.md  pyproject.toml
backend/app/: package-lock.json  package.json
backend/app/apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/app/apps/users/migrations/: 0001_initial.py  0002_alter_user_document_in_passport_and_more.py  0003_user_photo.py  0004_shop_alter_user_photo_user_shop.py  0005_shop_description.py  0006_alter_shop_description_alter_shop_poster_and_more.py  0007_alter_shop_description_alter_shop_poster.py
backend/app/apps/users/templates/: crud_shops.html  crud_users.html  index.html  shop_create.html  shop_delete.html  shop_detail.html  shop_edit.html  signup.html  user_create.html  user_delete.html  user_edit.html  user_redirect.html
backend/app/core/: urls.py
backend/app/settings/: settings.py  settings_static_templates.py  settings_storages.py
backend/app/templates/: base.html
backend/app/templates/includes/: navbar.html
