[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=6.0.2",
    "django-crispy-forms>=2.6",
    "django-debug-toolbar>=6.2.0",
    "django-storages[s3]>=1.14.6",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "python-decouple>=3.8",
]
